# cb7210/Makefile.am
# copyright (C) 2003 by Frank Mori Hess
# email : fmhess@users.sourceforge.net
#
#   This Makefile.am is free software; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; either version 2 of the License, or
#   (at your option) any later version.

MODULE_EXTRA_DIST = cb7210.h cb_cis_dump.txt cbi4882.txt
MODULE_SRCS = cb7210_init.c cb7210_cs.c interrupt.c cb7210_aux.c cb7210_read.c cb7210_write.c
MODULE = cb7210.o

include $(top_srcdir)/driver/Makefile-driver.am
