# driver/include/Makefile.am
# copyright (C) 2003 by Frank Mori Hess
# email : fmhess@users.sourceforge.net
#
#   This Makefile.am is free software; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; either version 2 of the License, or
#   (at your option) any later version.

EXTRA_DIST = amcc5920.h gpibP.h gpib_proto.h nec7210.h plx9050.h tms9914.h

install-data-local:
	$(INSTALL_HEADER) -D gpib_user.h $(includedir)/gpib/gpib_user.h
