# ines/Makefile.am
# copyright (C) 2003 by Frank Mori Hess
# email : fmhess@users.sourceforge.net
#
#   This Makefile.am is free software; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; either version 2 of the License, or
#   (at your option) any later version.

MODULE_EXTRA_DIST = ines.h ines_cis_dump.txt
MODULE_SRCS = ines_init.c ines_cs.c interrupt.c ines_util.c ines_read.c ines_write.c
MODULE = ines_gpib.o

include $(top_srcdir)/driver/Makefile-driver.am

