# pc2/Makefile.am
# copyright (C) 2003 by Frank Mori Hess
# email : fmhess@users.sourceforge.net
#
#   This Makefile.am is free software; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; either version 2 of the License, or
#   (at your option) any later version.

MODULE_EXTRA_DIST = pc2.h
MODULE_SRCS = pc2_init.c interrupt.c
MODULE = pc2_gpib.o

include $(top_srcdir)/driver/Makefile-driver.am

