# tnt4882_tms/Makefile.am
# copyright (C) 2003 by Frank Mori Hess
# email : fmhess@users.sourceforge.net
#
#   This Makefile.am is free software; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; either version 2 of the License, or
#   (at your option) any later version.

MODULE_EXTRA_DIST = tnt4882.h mite.h
MODULE_SRCS = init.c mite.c interrupt.c
MODULE = tnt4882_tms.o

include $(top_srcdir)/driver/Makefile-driver.am

